[FIX] fix overflow

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -61,9 +61,9 @@ a:hover {
   overflow: hidden;
 }
 
-div{
-  overflow: hidden;
-}
+/*div{*/
+/*  overflow: hidden;*/
+/*}*/
 
 ::-webkit-scrollbar {
   width: 8px;
